# Mini-ML_Ops_Platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/: thresholds.yaml
docker/: inference.Dockerfile
docs/: index.html
scripts/: smoke_infer.sh  smoke_train.sh
src/common/: hashing.py
src/data/: make_dataset.py
src/monitoring/: drift.py  retrain_decider.py
src/registry/: promote.py
src/serving/: app.py  load_model.py  schemas.py
src/training/: model.py  train.py
