[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-mlops-platform"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=15.0",
  "scikit-learn>=1.4",
  "torch>=2.2",
  "mlflow>=2.12",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6",
  "pyyaml>=6.0.1"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]
